@@ -1,3 +1,10 @@
+TAG: targetedalleleload-4-3-0-5
+DATE: October 09, 2009
+STAFF: jmason
+CHANGES:
+    - Project against cassette type not being determined
+    - Move cassette types into configuration for easier updates
+
 TAG: targetedalleleload-4-3-0-4
 DATE: October 09, 2009
 STAFF: jmason
